[package]
name = "dfs-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dfs-common = { path = "../dfs-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
toml = { workspace = true }
sled = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
nix = { version = "0.29", features = ["fs"] }
lru = "0.12"

[dev-dependencies]
tempfile = "3.15"
