[package]
name = "dfs-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dfs-common = { path = "../dfs-common" }
tokio = { workspace = true }
fuser = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
